--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="heading1" id="link2">About Me</div>
     <div class="about">
         <div class="aboutme" id=>
-            <p class="line11">I am a first-year BTech student at Dronacharya College of Engineering,
+            <p class="line11">I am a second-year BTech student at Dronacharya College of Engineering,
                  where I am studying computer science engineering. 
                  I'm a lively, enthusiastic person who is constantly 
                  willing to pick up new skills and absorb knowledge from new experiences.</p>
@@ -78,7 +78,7 @@
         <div class="line4">
             <div class="oneoneone">Dronacharya College Of Engineering</div>
             <div class="twotwotwo">Btech</div>
-            <div class="threethreethree">Pursuing(1st year)</div>
+            <div class="threethreethree">Pursuing(2nd year)</div>
             <div class="fourfourfour">2027</div>
         </div><hr class="line">
         </div>
